PAN-19 Progress so far